# rs-pugbot

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  MILESTONES.md  README.md  diesel.toml  rename-this-to-.env  rs-pugbot.code-workspace  rust-toolchain.toml  rustfmt.toml
.circleci/: config.yml
.github/: dependabot.yml
migrations/2018-02-11-215552_create_users/: down.sql  up.sql
migrations/2018-02-11-220031_create_user_ratings/: down.sql  up.sql
migrations/2018-02-11-225942_alter_user_ratings_user_id_non_null/: down.sql  up.sql
migrations/2018-02-18-031306_users_discriminator_name_unique_together/: down.sql  up.sql
migrations/2018-02-18-034202_alter_column_users_discriminator_as_integer/: down.sql  up.sql
migrations/2018-02-18-062321_fix_user_ratings_tablee/: down.sql  up.sql
migrations/2018-02-18-065230_add_game_title_table/: down.sql  up.sql
migrations/2018-02-18-065740_add_game_mode_tablee/: down.sql  up.sql
migrations/2018-02-18-070040_add_game_mode_to_ratings/: down.sql  up.sql
migrations/2018-02-18-070703_add_team_size_to_game_modes/: down.sql  up.sql
migrations/2018-02-18-071905_add_default_games_and_modes/: down.sql  up.sql
migrations/2018-02-18-190923_add_discord_user_id_to_users/: down.sql  up.sql
migrations/2018-02-19-011854_create_maps_table/: down.sql  up.sql
migrations/2018-04-20-210732_insert_overwatch_maps/: down.sql  up.sql
migrations/2021-05-15-221147_add_game_configs_table/: down.sql  up.sql
migrations/2021-05-15-224506_add_fk_game_config_to_game_mode/: down.sql  up.sql
migrations/2021-05-15-231958_drop_game_titles_fk_from_game_configs/: down.sql  up.sql
migrations/2021-05-16-033312_add_on_delete_cascade_game_configs/: down.sql  up.sql
migrations/2021-05-16-034046_add_on_delete_cascade_game_modes/: down.sql  up.sql
migrations/2021-05-16-034344_add_on_delete_cascade_maps/: down.sql  up.sql
migrations/2021-05-16-040411_drop_column_game_mode_team_size/: down.sql  up.sql
src/: main.rs
src/commands/: add.rs  remove.rs
src/models/: draft_pool.rs  game.rs  team.rs
src/pugbot/: db.rs  lib.rs  schema.rs  tables.rs  user.rs
src/pugbot/command_groups/: map_voting.rs  mod.rs  player_drafting.rs  player_registration.rs
src/pugbot/commands/: add.rs  mapvote.rs  mock_context.rs  mod.rs  pick.rs  remove.rs
src/pugbot/db/: mod.rs  test_utils.rs
src/pugbot/models/: draft_pool.rs  game.rs  game_config.rs  game_mode.rs  game_title.rs  (+5 more)
src/traits/: has_members.rs
tests/: test_commands.rs
tests/resources/: README.md  authors.json  maps.json  message.json  messages.json
(+5 files in other folders)
