[package]
name = "pugbot"
version = "0.1.0"
authors = ["Matt DeBoard <mdeboard@truecar.com>"]
# features = [ "const_fn" ]
edition = "2018"

[lib]
name = "pugbot"
path = "src/pugbot/lib.rs"

[[bin]]
name = "pugbot"
path = "src/main.rs"
test = false

[dependencies]
bigdecimal = "*"
diesel = { version = "^1.4", features = ["chrono", "postgres", "serde_json", "huge-tables", "numeric", "uuid"] }
# diesel_cli must be installed via the following command:
# cargo install diesel_cli --no-default-features --features postgres
diesel_migrations = "^1.4"
env_logger = "^0.7"
glicko2 = "*"
kankyo = "~0.1"
log = "~0.4"
num = "*"
r2d2 = "*"
r2d2-diesel = "*"
rand = "*"
serde = { version = "^1.0", features=["derive"] }
serde_json = "^1.0"
serenity = "^0.7"
typemap = "0.3"
