[package]
name = "pugbot"
version = "0.2.0"
authors = ["Matt DeBoard <mdeboard@truecar.com>"]
edition = "2018"

[lib]
name = "pugbot"
path = "src/pugbot/lib.rs"

[[bin]]
name = "pugbot"
path = "src/main.rs"
test = false

[dependencies]
bigdecimal = { version = ">= 0.0.10, < 0.2.0" }
diesel = { version = "1.4.6", features = [
  "64-column-tables",
  "bigdecimal",
  "chrono",
  "numeric",
  "postgres",
  "serde_json",
  "uuid",
] }
# diesel_cli must be installed via the following command:
# cargo install diesel_cli --no-default-features --features postgres
diesel_migrations = "1.4.0"
env_logger = "~0.4"
glicko2 = "*"
kankyo = "~0.1"
log = "~0.3"
num = "*"
r2d2 = "*"
r2d2-diesel = "*"
rand = "0.6.5"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serenity = "^0.10.5"
tokio = { version = "1", features = ["full"] }
typemap = "0.3"

[dev-dependencies]
tokio-test = "*"
futures = "0.3"
